# PLD_Comp

./: .gitignore  CMakeLists.txt  README.md  calc.h  grammaire.g4  grammaire.interp  grammaire.tokens  grammaireBaseVisitor.cpp  grammaireBaseVisitor.h  grammaireLexer.cpp  grammaireLexer.h  grammaireLexer.interp  grammaireParser.cpp  grammaireParser.h  grammaireVisitor.h
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.egit.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/http-cache.lucene60/: segments_1
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history.lucene60/: _0.cfe  _0.cfs  _0.si  segments_1
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Core/: calc.h
Core/Reader/: grammaireLexer.h  grammaireParser.h
PLD_Comp/Debug/: vc141.idb
PLD_Comp/Debug/PLD_Comp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PLD_Comp.lastbuildstate
Source/: makefile
Source/Core/: calc.h  makefile
Source/Core/Reader/: grammaireLexer.h  grammaireParser.cpp  grammaireParser.h
Source/Core/Visitor/: SymbolVisitor.cpp  SymbolVisitor.h  grammaireBaseVisitor.h  grammaireVisitor.cpp  grammaireVisitor.h
Source/Core/compute/: MapperSymbol.cpp  MapperSymbol.h
Source/Core/data/: Bloc.cpp  Bloc.h  BlocStruct.cpp  BlocStruct.h  LeftValue.cpp  LeftValue.h  Programme.cpp  Programme.h  dotexport.h  main.cpp  makefile  programme.txt
Source/Core/data/Definitions/: Definition.cpp  Definition.h  Parametre.cpp  Parametre.h  ParametreDefinition.cpp  ParametreDefinition.h
Source/Core/data/Expressions/: Affectation.cpp  Affectation.h  AffectationBinaire.cpp  AffectationBinaire.h  AffectationUnaire.cpp  AffectationUnaire.h  Char.cpp  Char.h  Expr.cpp  Expr.h  ExprAppel.cpp  ExprAppel.h  Name.cpp  Name.h  NameTab.cpp  NameTab.h  Operation.cpp  Operation.h  OperationBinaire.cpp  OperationBinaire.h  OperationUnaire.cpp  OperationUnaire.h  ParametreAppel.cpp  ParametreAppel.h  Val.cpp  Val.h
Source/Core/data/Instructions/: Instruction.cpp  Instruction.h  InstructionBreak.cpp  InstructionBreak.h  InstructionControle.cpp  InstructionControle.h  InstructionDeclaration.cpp  InstructionDeclaration.h  InstructionExpr.cpp  InstructionExpr.h  InstructionInit.cpp  InstructionInit.h  InstructionReturn.cpp  InstructionReturn.h  InstructionStruct.cpp  InstructionStruct.h
Source/Core/data/Structures/: ElseBloc.cpp  ElseBloc.h  StructureControle.cpp  StructureControle.h  StructureIf.cpp  StructureIf.h  StructureWhile.cpp  StructureWhile.h
Source/Core/data/enums/: OperateurAffectationBinaire.h  OperateurAffectationUnaire.h  OperateurBinaire.h  OperateurUnaire.h  Type.h
Source/Core/data/init_decl/: Declaration.cpp  Declaration.h  DeclarationTab.cpp  DeclarationTab.h  InitDecl.cpp  InitDecl.h  Initialisation.cpp  Initialisation.h  InitialisationTab.cpp  InitialisationTab.h  InitialisationVal.cpp  InitialisationVal.h  InstructionDeclaration.cpp  InstructionDeclaration.h  InstructionInit.cpp  InstructionInit.h  Symbole.cpp  Symbole.h  VarGlobale.cpp  VarGlobale.h  VarGlobaleDeclaration.cpp  VarGlobaleDeclaration.h  VarGlobaleInitialisation.cpp  VarGlobaleInitialisation.h
Source/Core/ir/: IR.cpp  IR.h  IRAffectation.cpp  IRAffectation.h  IRInstr.cpp  IRInstr.h  NoeudIR.cpp  NoeudIR.h
Source/Core/visitor/: DebugVisit.cpp  DebugVisit.h  IRVisit.cpp  IRVisit.h  MappingNameVisit.cpp  MappingNameVisit.h  StringOutput.cpp  StringOutput.h  VisitAST.cpp  VisitAST.h  VisitOutput.cpp  VisitOutput.h  Visitable.cpp  Visitable.h
Source/grammaire/: IRVisitor.h  grammaire.g4  grammaire.interp  grammaire.tokens  grammaireBaseVisitor.h  grammaireImplBaseVisitor.cpp  grammaireImplBaseVisitor.h  grammaireLexer.cpp  grammaireLexer.h  grammaireLexer.interp  grammaireLexer.tokens  grammaireMappingBaseVisitor.cpp  grammaireMappingBaseVisitor.h  grammaireParser.cpp  grammaireParser.h  grammaireVisitor.cpp  grammaireVisitor.h
UML/: StructureDonnees.mdj
grammaire/: grammaire.g4  grammaireLexer.interp
tests/: programme.txt
tests/front/ValidPrograms/: 01_SimpleDeclaration.c  02_IncludeStdint.c  03_OperatorPlus.c  04_OperatorMinus.c  05_OperatorDiv.c  06_OperatorMult.c  07_OperatorInf.c  08_OperatorSup.c  09_OperatorLeq.c  10_OperatorGeq.c  11_OperatorEqu.c  12_OperatorDiff.c  13_OperatorMod.c  14_OperatorAnd.c  15_OperatorOr.c  16_OperatorBOr.c  17_OperatorBAnd.c  18_OperatorNeg.c  19_OperatorLeftShift.c  20_OperatorRightShift.c  21_OperatorIncPost.c  22_OperatorIncPre.c  23_OperatorDecPost.c  24_OperatorDecPre.c  25_OperatorNot.c  26_OperatorXor.c  28_OperatorPlusAssign.c  29_OperatorMinusAssign.c  30_OperatorMultAssign.c  31_OperatorDivAssign.c  32_OperatorModAssign.c  33_OperatorBitAndAssign.c  34_OperatorBitOrAssign.c  35_OperatorBitXorAssign.c  36_OperatorComma.c  37_Par.c  38_ArithmeticExpression.c  39_ArithmeticExpressionWithPar.c  40_If.c  41_IfElse.c  (+13 more)
tests/in/: in2.c  in3.c  in4.c  in5.c  in6.c  in7.c
tests/presentation/: AckermannFunction.c  BlockRandom.c  ErrorInParameters.c  FunctionDeclarationNeeded.c  MoreThanSixArguments.c  Optimization.c  PostPreIncrement.c  StaticAnalysis.c  StringInitialization.c  SyracuseSequence.c  TestOperators.c  TestRecursivity.c  getcharTest.c  printIntegers.c  recursiveFact.c
tests/sujet/: in1.c  in2.c  in3.c  in4.c  in5.c  in6.c  in7.c
tests/sujet/asm/: out1.s  out2.s
