cmake_minimum_required(VERSION 3.9)
project(PLD_Comp)

set(CMAKE_CXX_STANDARD 11)

add_executable(PLD_Comp
        .metadata/.mylyn/.taskListIndex/segments_1
        .metadata/.mylyn/.taskListIndex/write.lock
        .metadata/.mylyn/.tasks.xml.zip
        .metadata/.mylyn/repositories.xml.zip
        .metadata/.mylyn/tasks.xml.zip
        .metadata/.plugins/org.eclipse.core.resources/.root/.indexes/history.version
        .metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.index
        .metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.version
        .metadata/.plugins/org.eclipse.core.resources/.root/2.tree
        .metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.resources
        .metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.core.resources.prefs
        .metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.debug.ui.prefs
        .metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.egit.core.prefs
        .metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.epp.logging.aeri.ide.prefs
        .metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.jdt.ui.prefs
        .metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.m2e.discovery.prefs
        .metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.mylyn.context.core.prefs
        .metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.mylyn.monitor.ui.prefs
        .metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.mylyn.tasks.ui.prefs
        .metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.team.ui.prefs
        .metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.browser.prefs
        .metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.editors.prefs
        .metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.ide.prefs
        .metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.workbench.prefs
        .metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
        .metadata/.plugins/org.eclipse.egit.ui/dialog_settings.xml
        .metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/http-cache.lucene60/segments_1
        .metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/http-cache.lucene60/write.lock
        .metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history.lucene60/_0.cfe
        .metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history.lucene60/_0.cfs
        .metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history.lucene60/_0.si
        .metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history.lucene60/segments_1
        .metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history.lucene60/write.lock
        .metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/server-config.json
        .metadata/.plugins/org.eclipse.jdt.core/assumedExternalFilesCache
        .metadata/.plugins/org.eclipse.jdt.core/externalFilesCache
        .metadata/.plugins/org.eclipse.jdt.core/index.db
        .metadata/.plugins/org.eclipse.jdt.core/nonChainingJarsCache
        .metadata/.plugins/org.eclipse.jdt.core/variablesAndContainers.dat
        .metadata/.plugins/org.eclipse.jdt.ui/dialog_settings.xml
        .metadata/.plugins/org.eclipse.jdt.ui/OpenTypeHistory.xml
        .metadata/.plugins/org.eclipse.jdt.ui/QualifiedTypeNameHistory.xml
        .metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
        .metadata/.plugins/org.eclipse.m2e.logback.configuration/logback.1.8.2.20171007-0217.xml
        .metadata/.plugins/org.eclipse.oomph.setup/workspace.setup
        .metadata/.plugins/org.eclipse.recommenders.news.impl/downloads/http%3A%2F%2Fwww.eclipse.org%2Fhome%2Feclipsenews.rss
        .metadata/.plugins/org.eclipse.recommenders.news.impl/downloads/http%3A%2F%2Fwww.eclipse.org%2Frecommenders%2Ffeeds%2Fide.rss
        .metadata/.plugins/org.eclipse.ui.ide/dialog_settings.xml
        .metadata/.plugins/org.eclipse.ui.intro/introstate
        .metadata/.plugins/org.eclipse.ui.workbench/dialog_settings.xml
        .metadata/.plugins/org.eclipse.ui.workbench/workingsets.xml
        .metadata/.lock
        .metadata/.log
        .metadata/version.ini
        Source/Core/data/Definitions/Definition.cpp
        Source/Core/data/Definitions/Definition.h
        Source/Core/data/Definitions/Parametre.cpp
        Source/Core/data/Definitions/Parametre.h
        Source/Core/data/Definitions/ParametreDefinition.cpp
        Source/Core/data/Definitions/ParametreDefinition.h
        Source/Core/data/enums/OperateurAffectationBinaire.h
        Source/Core/data/enums/OperateurAffectationUnaire.h
        Source/Core/data/enums/OperateurBinaire.h
        Source/Core/data/enums/OperateurUnaire.h
        Source/Core/data/enums/Type.h
        Source/Core/data/Expressions/Affectation.cpp
        Source/Core/data/Expressions/Affectation.h
        Source/Core/data/Expressions/AffectationBinaire.cpp
        Source/Core/data/Expressions/AffectationBinaire.h
        Source/Core/data/Expressions/AffectationUnaire.cpp
        Source/Core/data/Expressions/AffectationUnaire.h
        Source/Core/data/Expressions/Char.cpp
        Source/Core/data/Expressions/Char.h
        Source/Core/data/Expressions/Expr.cpp
        Source/Core/data/Expressions/Expr.h
        Source/Core/data/Expressions/ExprAppel.cpp
        Source/Core/data/Expressions/ExprAppel.h
        Source/Core/data/Expressions/Name.cpp
        Source/Core/data/Expressions/Name.h
        Source/Core/data/Expressions/NameTab.cpp
        Source/Core/data/Expressions/NameTab.h
        Source/Core/data/Expressions/Operation.cpp
        Source/Core/data/Expressions/Operation.h
        Source/Core/data/Expressions/OperationBinaire.cpp
        Source/Core/data/Expressions/OperationBinaire.h
        Source/Core/data/Expressions/OperationUnaire.cpp
        Source/Core/data/Expressions/OperationUnaire.h
        Source/Core/data/Expressions/ParametreAppel.cpp
        Source/Core/data/Expressions/ParametreAppel.h
        Source/Core/data/Expressions/Val.cpp
        Source/Core/data/Expressions/Val.h
        Source/Core/data/init_decl/Declaration.cpp
        Source/Core/data/init_decl/Declaration.h
        Source/Core/data/init_decl/DeclarationTab.cpp
        Source/Core/data/init_decl/DeclarationTab.h
        Source/Core/data/init_decl/Initialisation.cpp
        Source/Core/data/init_decl/Initialisation.h
        Source/Core/data/init_decl/InitialisationTab.cpp
        Source/Core/data/init_decl/InitialisationTab.h
        Source/Core/data/init_decl/VarGlobale.cpp
        Source/Core/data/init_decl/VarGlobale.h
        Source/Core/data/init_decl/VarGlobaleDeclaration.cpp
        Source/Core/data/init_decl/VarGlobaleDeclaration.h
        Source/Core/data/init_decl/VarGlobaleInitialisation.cpp
        Source/Core/data/init_decl/VarGlobaleInitialisation.h
        Source/Core/data/Instructions/Instruction.cpp
        Source/Core/data/Instructions/Instruction.h
        Source/Core/data/Instructions/InstructionBreak.cpp
        Source/Core/data/Instructions/InstructionBreak.h
        Source/Core/data/Instructions/InstructionControle.cpp
        Source/Core/data/Instructions/InstructionControle.h
        Source/Core/data/Instructions/InstructionDeclaration.cpp
        Source/Core/data/Instructions/InstructionDeclaration.h
        Source/Core/data/Instructions/InstructionExpr.cpp
        Source/Core/data/Instructions/InstructionExpr.h
        Source/Core/data/Instructions/InstructionInit.cpp
        Source/Core/data/Instructions/InstructionInit.h
        Source/Core/data/Instructions/InstructionReturn.cpp
        Source/Core/data/Instructions/InstructionReturn.h
        Source/Core/data/Structures/ElseBloc.cpp
        Source/Core/data/Structures/ElseBloc.h
        Source/Core/data/Structures/StructureControle.cpp
        Source/Core/data/Structures/StructureControle.h
        Source/Core/data/Structures/StructureIf.cpp
        Source/Core/data/Structures/StructureIf.h
        Source/Core/data/Structures/StructureWhile.cpp
        Source/Core/data/Structures/StructureWhile.h
        Source/Core/data/Bloc.cpp
        Source/Core/data/Bloc.h
        Source/Core/data/dotexport.h
        Source/Core/data/LeftValue.cpp
        Source/Core/data/LeftValue.h
        Source/Core/data/main.cpp
        Source/Core/data/Programme.cpp
        Source/Core/data/Programme.h
        Source/Core/Reader/grammaireLexer.cpp
        Source/Core/Reader/grammaireLexer.h
        Source/Core/Reader/grammaireParser.cpp
        Source/Core/Reader/grammaireParser.h
        Source/Core/Visitor/grammaireBaseVisitor.cpp
        Source/Core/Visitor/grammaireBaseVisitor.h
        Source/Core/Visitor/grammaireVisitor.cpp
        Source/Core/Visitor/grammaireVisitor.h
        Source/Core/calc.h
        Source/grammaire/grammaire.g4
        Source/grammaire/grammaire.interp
        Source/grammaire/grammaire.tokens
        Source/grammaire/grammaireLexer.interp
        Source/grammaire/grammaireLexer.tokens
        Source/makefile
        UML/StructureDonnees.mdj
        .gitignore
        ClassDiagram.cd
        README.md)
